--- a/packages/grid/src/Grid.css
+++ b/packages/grid/src/Grid.css
@@ -1,10 +1,27 @@
+* {
+	padding: 0;
+	margin: 0;
+}
+
+.wrapper {
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+
 .grid-item {
 	position: relative;
 }
 
 .resizer {
 	position: absolute;
+	background-color: blue;
+}
+
+.add-col-btn {
+	position: absolute;
 	width: 5px;
 	height: 100%;
-	background-color: blue;
+	background-color: goldenrod;
+	z-index: 1000;
 }
