--- a/packages/frontend/src/components/Grid/GridItem.css
+++ b/packages/frontend/src/components/Grid/GridItem.css
@@ -9,6 +9,7 @@
 	visibility: hidden;
 	/* ^^^ dev */
 	position: absolute;
+	z-index: 1000;
 	top: 0;
 	width: 100%;
 	background-color: var(--primary);
