--- a/packages/frontend/src/components/Grid.css
+++ b/packages/frontend/src/components/Grid.css
@@ -1,3 +1,18 @@
+.grid {
+	flex-grow: 1;
+	overflow: hidden;
+}
+
+.grid__container {
+	height: 100%;
+	width: 100%;
+	display: flex;
+}
+
+.grid__container--vertical {
+	flex-direction: column;
+}
+
 .grid__item {
 	width: 100%;
 	height: 100%;
